# tfg-ipc-mcp

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
audit/: 01_etl_01_ingest_cpi_global_audit.md  01_etl_01_ingest_ipc_spain_audit.md  01_etl_02_ingest_hicp_ecb_audit.md  01_etl_03_ingest_ecb_rates_audit.md  01_etl_04_ingest_gdelt_audit.md  01_etl_05_clean_and_align_audit.md  01_etl_06_feature_engineering_exog_audit.md  01_etl_07_ingest_energy_prices_audit.md  01_etl_08_merge_energy_features_audit.md  01_etl_09_ingest_institutional_signals_audit.md  01_etl_10_ingest_institutional_signals_global_audit.md  01_etl_10_merge_institutional_features_audit.md  01_etl_11_ingest_hicp_europe_audit.md  01_etl_12_ingest_europe_signals_audit.md  01_etl_13_build_features_c1_europe_audit.md  03_baseline_01_arima_auto_audit.md  03_baseline_01_arima_auto_europe_audit.md  03_baseline_01_arima_auto_global_audit.md  03_baseline_02_sarima_europe_audit.md  03_baseline_02_sarima_global_audit.md  03_baseline_02_sarima_seasonal_audit.md  03_baseline_03_sarimax_europe_audit.md  03_baseline_03_sarimax_global_audit.md  03_baseline_03_sarimax_with_exog_audit.md  03_baseline_04_backtesting_rolling_audit.md  03_baseline_04_backtesting_rolling_europe_audit.md  (+79 more)
tfg-arquitectura/backend/: .dockerignore  Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  seed_ablation.py  seed_experiments.py  seed_ipc.py
tfg-arquitectura/backend/app/: config.py  main.py
tfg-arquitectura/backend/app/api/: deps.py
tfg-arquitectura/backend/app/api/v1/: __init__.py  assistant.py  auth.py  datasets.py  drift.py  experiments.py  health.py  metrics.py  news.py  runs.py  users.py  whatif.py
tfg-arquitectura/backend/app/core/: exceptions.py  logging.py  permissions.py  security.py
tfg-arquitectura/backend/app/db/: mongo.py  postgres.py
tfg-arquitectura/backend/app/etl/: load_parquets.py
tfg-arquitectura/backend/app/forecasting/: base.py  mcp_exog.py  registry.py
tfg-arquitectura/backend/app/forecasting/adapters/: arima.py  auto_arima.py  chronos.py  ensemble.py  naive.py  ridge.py  sarima.py  sarimax.py  timegpt.py  timesfm.py
tfg-arquitectura/backend/app/mcp/: client.py
tfg-arquitectura/backend/app/models/: dataset.py  experiment.py  model_catalog.py  user.py
tfg-arquitectura/backend/app/schemas/: auth.py  dataset.py  experiment.py  metrics.py  run.py
tfg-arquitectura/backend/app/services/: gdelt.py  narration.py
tfg-arquitectura/backend/migrations/: env.py
tfg-arquitectura/backend/migrations/versions/: 20260512_0001_users.py  20260512_0002_domain.py  20260518_0003_model_catalog_seed.py  20260519_0004_model_type_ensemble.py
tfg-arquitectura/backend/scripts/: check_timegpt_runs.py  seed_ablation.py  seed_experiments.py  seed_ipc.py
tfg-arquitectura/backend/tests/: conftest.py
tfg-arquitectura/backend/tests/integration/: conftest.py  test_auth_flow.py  test_datasets.py  test_experiments.py  test_health.py  test_metrics.py  test_runs.py  test_users.py
tfg-arquitectura/backend/tests/unit/: test_drift_logic.py  test_metrics.py  test_registry.py
(+487 files in other folders)
