[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfg-ipc-mcp"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # ETL / datos
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tqdm>=4.66",

    # Series temporales — baseline
    "statsmodels>=0.14",
    "pmdarima>=2.0",

    # Deep learning
    "torch>=2.2",

    # Foundation models
    "nixtla>=0.5",          # TimeGPT
    # timesfm y chronos-forecasting se instalan aparte (ver tfg-forecasting/requirements.txt)

    # MCP / agente
    "anthropic>=0.25",
    "mcp>=1.0",

    # Métricas / evaluación
    "scikit-learn>=1.4",
    "scipy>=1.13",
]

[tool.uv.workspace]
members = ["tfg-arquitectura/backend"]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pytest>=8.0",
    "ruff>=0.4",
]
